--- a/src/app/blog-details/blog-details.page.html
+++ b/src/app/blog-details/blog-details.page.html
@@ -1,13 +1,24 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+      <ion-back-button defaultHref="/blogs"></ion-back-button>
+
+    </ion-buttons>
     <ion-title>blog-details</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">blog-details</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>{{ blog?.title }}</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <p>{{ blog?.description }}</p>
+      <p>Date: {{ blog?.date | date }}</p>
+      <p>Creator: {{ blog?.creator }}</p>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
