--- a/src/app/blogs/blogs.page.html
+++ b/src/app/blogs/blogs.page.html
@@ -1,13 +1,31 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>blogs</ion-title>
+  <ion-toolbar  id="toolbar">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <div style="display: flex !important;">
+      <ion-title>Blogs</ion-title>
+      <ion-button expand="block" (click)="presentToast('bottom')" style="display: inline-flex">
+        <ion-icon [name]="weather < 20 ? 'snow-outline' : 'sunny-outline'"></ion-icon>
+      </ion-button>
+    </div>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">blogs</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+<ion-content>
+<!--  =========-->
+<!--  COMENTAT PENTRU CA AM DOAR 50 DE REQUESTURI PE LUNA !! -->
+<!--  <div *ngIf="(weather$ | async) as weather">-->
+<!--    <ion-icon [name]="weather?.main.temp < 20 ? 'snow-outline' : 'sunny-outline'"></ion-icon>-->
+<!--    &lt;!&ndash;    asa vine din api. presupun ca este Celsius &ndash;&gt;-->
+<!--    <span>{{ weather?.main.temp }}°C</span>-->
+<!--  </div>-->
+<!--  ================-->
+
+  <ion-searchbar [(ngModel)]="creatorFilter" (ionChange)="applyFilter()" placeholder="Filter by creator"></ion-searchbar>
+
+  <ion-list>
+    <app-blog-card *ngFor="let blog of filteredBlogs" [blog]="blog"></app-blog-card>
+  </ion-list>
 </ion-content>
