--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>users</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,21 +15,9 @@
   </ion-header>
 
 
-  <ion-content>
-    <ion-list>
-<!--      TODO -->
-      <ion-item *ngFor="let user of users">
-<!--        <ion-label>{{ user.name }}</ion-label>-->
-        <ion-label>
-          <h2>{{ user.name }}</h2>
-          <p>Username: {{ user.username }}</p>
-          <p>Email: {{ user.email }}</p>
-          <p>Address: {{ user.address.street }}, {{ user.address.suite }}, {{ user.address.city }}, {{ user.address.zipcode }}</p>
-          <p>Phone: {{ user.phone }}</p>
-          <p>Website: <a [href]="user.website">{{ user.website }}</a></p>
-          <p>Company: {{ user.company.name }} - {{ user.company.catchPhrase }}</p>
-        </ion-label>
-      </ion-item>
+
+    <ion-list >
+      <app-user-card  *ngFor="let user of users" [user]="user"></app-user-card>
     </ion-list>
-  </ion-content>
+
 </ion-content>
