--- a/src/app/utilities/utilities.page.html
+++ b/src/app/utilities/utilities.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>utilities</ion-title>
+    <ion-title>Utilities</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -16,7 +16,7 @@
 
   <ion-list>
     <ion-item>
-      <ion-label>Connection type and info about your device</ion-label>
+      <ion-label>Connection type and info about device</ion-label>
       <ion-text>{{networkStatus?.connectionType}}</ion-text>
     </ion-item>
     <ion-item>
