--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -3,21 +3,12 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>users</ion-title>
+    <ion-title>Users</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">users</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-
-
     <ion-list >
       <app-user-card  *ngFor="let user of users" [user]="user"></app-user-card>
     </ion-list>
-
 </ion-content>
