--- a/src/app/weather-page/weather-page.page.html
+++ b/src/app/weather-page/weather-page.page.html
@@ -3,20 +3,15 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>weather-page</ion-title>
+    <ion-title>Weather</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">weather-page</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
   <ion-item>
-    <ion-label position="floating" color="success"  style="margin: 1rem 0 3rem 0; font-size: 3rem"> Town</ion-label>
-    <ion-input [(ngModel)]="town" type="text"></ion-input>
+    <ion-label position="floating"  style="margin: 1rem 0 3rem 0; font-size: 3rem">Search town</ion-label>
+    <ion-input [(ngModel)]="town" type="text" ></ion-input>
   </ion-item>
 
   <ion-button expand="block" (click)="setTown()">Get value</ion-button>
