update users page with route id &  loading service  & custom header

--- a/src/app/blog-details/blog-details.page.html
+++ b/src/app/blog-details/blog-details.page.html
@@ -1,13 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-      <ion-back-button defaultHref="/blogs"></ion-back-button>
 
-    </ion-buttons>
-    <ion-title>blog-details</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [pageTitle]="blog?.title" [logoUrl]="'assets/icon/favicon.png'"></app-header>
 
 <ion-content>
   <ion-card>
