--- a/src/app/utilities/utilities.page.html
+++ b/src/app/utilities/utilities.page.html
@@ -1,19 +1,6 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Utilities</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [pageTitle]="'Info'" ></app-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">utilities</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <ion-list>
     <ion-item>
       <ion-label>Connection type and info about device</ion-label>
@@ -61,5 +48,4 @@
       <ion-text>{{deviceInfo?.webViewVersion}}</ion-text>
     </ion-item>
   </ion-list>
-
 </ion-content>
