--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -1,11 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Users</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header  [pageTitle]="'Users'"></app-header>
 
 <ion-content [fullscreen]="true">
     <ion-list >
